[package]
name = "anera"
version = "0.1.0"
edition = "2021"

[dependencies]
decimal = "2.1.0"
ethers = { version = "2.0.14", features = ["ws"] }
json = "0.12.4"
rust_decimal = { version = "1.36.0", features = ["maths"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

tokio = { version = "1.40.0", features = ["full"] }
